--- a/3tier/cfn/dev-3Tier-DB.template.yaml
+++ b/3tier/cfn/dev-3Tier-DB.template.yaml
@@ -1,46 +1,40 @@
 Resources:
-  dbSgfromdev3TierDBappSgF396B4085432CE9C8C42:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      IpProtocol: tcp
-      Description: from dev3TierDBappSgF396B408:5432
-      FromPort: 5432
-      GroupId:
-        Fn::ImportValue: dev-3Tier-Network:dev3TierdbSgSecurityGroupId30BE5021
-      SourceSecurityGroupId:
-        Fn::ImportValue: dev-3Tier-Network:dev3TierappSgSecurityGroupId5821772A
-      ToPort: 5432
-    Metadata:
-      aws:cdk:path: dev-3Tier-DB/dbSg/from dev3TierDBappSgF396B408:5432
-  cfnDBSg:
-    Type: AWS::RDS::DBSecurityGroup
-    Properties:
-      DBSecurityGroupIngress:
-        - EC2SecurityGroupId:
-            Fn::ImportValue: dev-3Tier-Network:dev3TierdbSgSecurityGroupId30BE5021
-      GroupDescription: db security group
-      EC2VpcId:
-        Fn::ImportValue: dev-3Tier-Network:VPCVpcId2F75874A
-    Metadata:
-      aws:cdk:path: dev-3Tier-DB/cfnDBSg
   cfnSubnet:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
       DBSubnetGroupDescription: DB Subnet Group
       SubnetIds:
         - Fn::Select:
-            - 2
+            - 0
             - Fn::Split:
                 - ","
                 - Fn::ImportValue: dev-3Tier-Network:VPCIsolatedSubnetIDs0BAB2DBD
         - Fn::Select:
-            - 3
+            - 1
             - Fn::Split:
                 - ","
                 - Fn::ImportValue: dev-3Tier-Network:VPCIsolatedSubnetIDs0BAB2DBD
       DBSubnetGroupName: dev-3Tier-dbSubnet
     Metadata:
       aws:cdk:path: dev-3Tier-DB/cfnSubnet
+  dbsgCE6973BD:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: dev-3Tier-DB/db-sg
+      GroupName: dev-3Tier-db-sg
+      SecurityGroupEgress:
+        - CidrIp: 0.0.0.0/0
+          Description: Allow all outbound traffic by default
+          IpProtocol: "-1"
+      SecurityGroupIngress:
+        []
+      Tags:
+        - Key: Name
+          Value: dev-3Tier-db-sg
+      VpcId:
+        Fn::ImportValue: dev-3Tier-Network:VPCVpcId2F75874A
+    Metadata:
+      aws:cdk:path: dev-3Tier-DB/db-sg/Resource
   RDS:
     Type: AWS::RDS::DBInstance
     Properties:
@@ -51,8 +45,6 @@ Resources:
       BackupRetentionPeriod: "0"
       DBInstanceIdentifier: dev-3Tier-postgres
       DBName: postgres
-      DBSecurityGroups:
-        - Ref: cfnDBSg
       DBSubnetGroupName:
         Ref: cfnSubnet
       DeletionProtection: false
@@ -61,9 +53,21 @@ Resources:
       MasterUsername: wwalpha
       MasterUserPassword: session10
       MultiAZ: false
+      VPCSecurityGroups:
+        - Fn::GetAtt:
+            - dbsgCE6973BD
+            - GroupId
     Metadata:
       aws:cdk:path: dev-3Tier-DB/RDS
   CDKMetadata:
     Type: AWS::CDK::Metadata
     Properties:
       Modules: aws-cdk=0.22.0,@aws-cdk/aws-autoscaling=0.22.0,@aws-cdk/aws-autoscaling-common=0.22.0,@aws-cdk/aws-cloudwatch=0.22.0,@aws-cdk/aws-codedeploy-api=0.22.0,@aws-cdk/aws-ec2=0.22.0,@aws-cdk/aws-elasticloadbalancingv2=0.22.0,@aws-cdk/aws-iam=0.22.0,@aws-cdk/aws-rds=0.22.0,@aws-cdk/cdk=0.22.0,@aws-cdk/cx-api=0.22.0,jsii-runtime=node.js/v10.14.1
+Outputs:
+  ExportsOutputFnGetAttdbsgCE6973BDGroupIdACE24D8F:
+    Value:
+      Fn::GetAtt:
+        - dbsgCE6973BD
+        - GroupId
+    Export:
+      Name: dev-3Tier-DB:ExportsOutputFnGetAttdbsgCE6973BDGroupIdACE24D8F
